Fixed drop out regularization
redesigned network and layers